added coloring + rasterloader in different file

--- a/src/qml/qml.qrc
+++ b/src/qml/qml.qrc
@@ -3,5 +3,6 @@
         <file>main.qml</file>
         <file>MapForm.qml</file>
         <file>MapGrid.qml</file>
+        <file>RasterLoader.qml</file>
     </qresource>
 </RCC>
